samp elements to code

--- a/Distinfo.html
+++ b/Distinfo.html
@@ -88,7 +88,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 <pre class="smallexample">     enhancer1 2L 2345  3456
      enhancer2 2R 4567  5678
 </pre>
-   <p>You can find example files in the folder <samp><span class="file">example</span></samp> of the tarball. You can then try:
+   <p>You can find example files in the folder <code><span class="file">example</span></code> of the tarball. You can then try:
 <pre class="smallexample">     imogene distinfo --input example/PWM1.dat example/PWM2.dat
 </pre>
    <!-- Copyright (C) 2006-2011 Hervé Rouault <rouault@lps.ens.fr> -->
