--- a/Extract.html
+++ b/Extract.html
@@ -82,7 +82,7 @@ This is the output of <code>imogene extract --help</code>:
 <pre class="smallexample">     enhancer1 2L 2345  3456
      enhancer2 2R 4567  5678
 </pre>
-   <p>You can find example files in the folder <samp><span class="file">example</span></samp> of the tarball. You can then try:
+   <p>You can find example files in the folder <code><span class="file">example</span></code> of the tarball. You can then try:
 <pre class="smallexample">     imogene extract --input example/enhancer-coords.dat
 </pre>
    <!-- Copyright (C) 2006-2011 Hervé Rouault <rouault@lps.ens.fr> -->
