--- a/Test.html
+++ b/Test.html
@@ -64,10 +64,10 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 
 <h3 class="section">6.1 Extraction</h3>
 
-<p>For drosophila, there is a file <samp><span class="file">examples/extract/coords-droso.dat</span></samp> that can be used as an input for <samp><span class="command">imogene extract</span></samp>:
+<p>For drosophila, there is a file <code><span class="file">examples/extract/coords-droso.dat</span></code> that can be used as an input for <samp><span class="command">imogene extract</span></samp>:
 <pre class="smallexample">     imogene extract -s droso --input examples/extract/coords-droso.dat
 </pre>
-   <p>It creates a folder <samp><span class="file">align</span></samp> containing the extracted fasta formatted alignments.
+   <p>It creates a folder <code><span class="file">align</span></code> containing the extracted fasta formatted alignments.
 
 <h3 class="section">6.2 Running genmot on the extracted sequences</h3>
 
