--- a/Install.html
+++ b/Install.html
@@ -93,7 +93,7 @@ clone instruction:
 <li>python markdown2
 </ul>
 
-   <p>you will then need to indicate that you want to create mobyle files with the <samp><span class="command">--enable-mobyle</span></samp> option if the <samp><span class="command">configure</span></samp> script.
+   <p>you will then need to indicate that you want to create mobyle files with the <code><span class="command">--enable-mobyle</span></code> option if the <samp><span class="command">configure</span></samp> script.
 
    <p>If you use a development version, you will need some additional tools:
      <ul>
@@ -118,7 +118,7 @@ clone instruction:
    <h3 class="section">1.4 Alignment files download</h3>
 
 <p>To download the genomes, you have to execute the proper python script:
-<samp><span class="command">python $PREFIX/lib/python-yourversion/site-packages/getalign-{droso,eutherian}.py</span></samp>
+<code><span class="command">python $PREFIX/lib/python-yourversion/site-packages/getalign-{droso,eutherian}.py</span></code>
 
 <h3 class="section">1.5 Background sequences generation</h3>
 
@@ -130,7 +130,7 @@ clone instruction:
 
 <h4 class="subsection">1.5.1 Generate a new set of coordinates</h4>
 
-<p>You have to execute the command <samp><span class="command">python $PREFIX/lib/python-yourversion/site-packages/extractbackground-{droso,eutherian}.py &gt; your-background-coords.dat</span></samp>.
+<p>You have to execute the command <code><span class="command">python $PREFIX/lib/python-yourversion/site-packages/extractbackground-{droso,eutherian}.py &gt; your-background-coords.dat</span></code>.
 
 <!-- Copyright (C) 2006-2011 Hervé Rouault <rouault@lps.ens.fr> -->
 <!-- Copyright (C) 2009-2011 Marc Santolini <santolin@lps.ens.fr> -->
@@ -146,7 +146,7 @@ clone instruction:
 <!-- You should have received a copy of the GNU General Public License -->
 <!-- along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>. -->
 <div class="footnote">
-<h4>Footnotes</h4><p class="footnote"><small>[<a name="fn-1" href="#fnd-1">1</a>]</small> Note that if you use the development version from github, you have first to generate the configure script using <samp><span class="command">./autogen.sh</span></samp></p>
+<h4>Footnotes</h4><p class="footnote"><small>[<a name="fn-1" href="#fnd-1">1</a>]</small> Note that if you use the development version from github, you have first to generate the configure script using <code><span class="command">./autogen.sh</span></code></p>
 
    <p><hr></div>
 
