--- a/examples/display/display-droso/results_genmot.html
+++ b/examples/display/display-droso/results_genmot.html
@@ -39,7 +39,7 @@
 <td class="mot5"></td><td>5</td> <td><a href="Motif5.pdf"><img src="Motif5.png" alt="Motif 5" /></a></td><td>-15.399</td><td>56.4583</td>
 </tr>
 </table>
-<h2>Motifs instances in the training set</h2><h3>>DroMel seq1357_2R_18937351_18937843 2R 18937351 18937843</h3>
+<h2>Motifs instances in the training set</h2><h3>>DroMel seq1357 2R 18937351 18937843</h3>
 <pre>
 CAAAGGACAC  GGACACGCAT  CCTGGCATTG  TTTTCAATTC  ATTTACGCGT  CGACTCAAGT  
 CGCTCGCCCA  CACATATGTT  GGGAAAATAA  TCGAAAAACG  GTTTGTCCCT  TGGCATGAGG  
@@ -51,7 +51,7 @@ TTGAGCCGCT  CTTCCAGTAC  TTCTTAAAAA  ACCCCTGGAA  TTACATGCAG  TCGAAGAAGG
 AAGAGAGTGG  AGGAGTCCAA  TGAGTCGAAG  GAGCCCAATG  AGTCGAATGA  GTCGGAGAGG  
 GGGCGTTGAC  AGT
 </pre>
-<h3>>DroMel seq1396_2R_19526211_19526451 2R 19526211 19526451</h3>
+<h3>>DroMel seq1396 2R 19526211 19526451</h3>
 <pre>
 CAGAGGCCAT  CGTGTCATCC  AAGATTATGA  TTTTGACAGG  CATCACGACG  ATATGACATA  
 TGCACGAATG  TCTCTTCGAT  CTATTTTTAT  AGGAGAGATA  TCTGTCAGCA  CATGTTTGTA  
@@ -59,7 +59,7 @@ ACCCTACACT  CGTGCCCTGC  CTATAAATAA  AAAAGTTAAG  ATCACAATTT  TAAGGAGATC
 TTTGTTATAA  TATATTGATT  AATTTATCTC  GAAATACCTA  CAATTCTTAT  CCCCATTAGC  
 C
 </pre>
-<h3>>DroMel seq1397_2R_19526657_19527033 2R 19526657 19527033</h3>
+<h3>>DroMel seq1397 2R 19526657 19527033</h3>
 <pre>
 TTTGTCAAGA  GAGTTCGGGC  TAAAAAAAAA  AAGAAAAACA  AGAATAAGAA  TAAGAATAAG  
 GACAACGAAA  AAACAAGGAA  ATACAGTTGT  AAAACCGGCG  ACTCGAGCCA  CAGAAAAGCA  
@@ -69,7 +69,7 @@ TGATCCTGTT  TGCCGGCAGC  GCCCTTCACA  GCTTCGCTTC  TGGATTGTCG  CATTATGGAT
 TTCCGAGCGG  TCGCAGCGGT  GTGTCCTTTT  GTTTTAAATT  AGCACGGCAT  GTT<span class="conserved mot2">GCACATG  
 CGG</span>CATCATC  TGTCCGT
 </pre>
-<h3>>DroMel seq2300_3R_10415381_10415780 3R 10415381 10415780</h3>
+<h3>>DroMel seq2300 3R 10415381 10415780</h3>
 <pre>
 TTGTTAATAT  CTTAACTTTT  CAGGATATAA  CATGCTAAGT  GTTATATTAT  ATAACATTAA  
 AGTTATTTCT  GCCAGTGTAA  CGTTGCA<span class="mot1">GAG  TCACTTG</span>CTC  CGCAGAGAGC  CGCCACTCAA  
@@ -79,7 +79,7 @@ GGGTTATTTG  GTTGTTGGCC  CAGTATCGAT  GGCAGGCCCG  ATTTTAGACC  CAGTCCACTT
 AGGAATTCCA  CGGA<span class="conserved mot3">CAGACC  ACAT</span>G<span class="conserved mot1">GACTC  TCTAG</span>CATTT  TGCCACTTCA  GTTGTTGCTT  
 CAGTTTCAGT  TTTTTTTTTC  CTAGTTGCAC  TGGGGAAAAA  
 </pre>
-<h3>>DroMel seq257_2R_5025930_5026695 2R 5025930 5026695</h3>
+<h3>>DroMel seq257 2R 5025930 5026695</h3>
 <pre>
 AAGTCCACGA  CAATCAACAT  GCATCGGAGC  ACAATAAAAA  GGCAAAAGTG  GAAAGGAAGA  
 CTAGGCAAGA  CCGAGAAGAG  TGACAAAGAG  CGAGGGCGGA  AGTGCGGCGA  GGACAAGGCT  
@@ -95,7 +95,7 @@ CCTTCGCATT  TAAAATTGAT  TAAAACTAAA  AACACTCGAT  GCCGACGCCG  TGCCTTGTTT
 CGTTTTCAGT  GCGATCGCAG  ACATTGTGCA  AAACGGTTCA  CAGTTCTCTC  CTCGCGACTG  
 CAGGTGATCG  AGTTTTTTTC  GTTTGAGTGC  ACTAAAAAAA  AACAGA
 </pre>
-<h3>>DroMel seq2820_3R_17227574_17227958 3R 17227574 17227958</h3>
+<h3>>DroMel seq2820 3R 17227574 17227958</h3>
 <pre>
 CCTTGTCGCC  C<span class="conserved mot1">GTCGCTCCC  G</span>ACCAGACAG  <span class="conserved mot1">GACACTCTTG  </span>AGGATGTCGG  CAGGAGGATG  
 AAATNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  
@@ -105,14 +105,14 @@ NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN
 NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  NNNNNNNNNN  
 NNNNNNNNNN  NNNGCAAAGA  ACGAT
 </pre>
-<h3>>DroMel seq2821_3R_17228198_17228402 3R 17228198 17228402</h3>
+<h3>>DroMel seq2821 3R 17228198 17228402</h3>
 <pre>
 TG<span class="mot2">TGGCATAT  GT</span>GTATATTT  TCCATATGTT  AAAGTACATT  ATTTTACGCA  TTTACTGAAG  
 AAACTTCGTC  TAAGTTAATA  TATTTTCAGA  CAGTTCTTAT  GGAAATTATA  AATATCATTA  
 ATGCCTCGAT  CTCTATTTGT  TGTTTACAGT  ACAGAAACGA  TTTTTGGC<span class="mot4">CG  TGTATCCC</span>AC  
 CACTCGACTA  GTGCATTTAG  TGCTG
 </pre>
-<h3>>DroMel seq2837_3R_17392100_17392639 3R 17392100 17392639</h3>
+<h3>>DroMel seq2837 3R 17392100 17392639</h3>
 <pre>
 TGCAGTGAAT  GCAACTTGTA  AATCTGTCAC  GCGTCCCAGT  AAATCATCCT  GCATAAGTAA  
 TGTGC<span class="conserved mot5">AGTTT  AGCCC</span>GGAGA  ACACACCCAG  AATTCGAAA<span class="mot4">A  CGATACTCC</span>C  CTCGAACCAC  
@@ -124,7 +124,7 @@ TTACTTGGCC  ATGTTCCCAA  AGGCCTGGCC  CCTGGCACTA  AAGTTGCTCT  GGGTGGCGAT
 TCGGCGGCCA  ATTAAAATCC  CAATCAGGGC  TCTACTGTAA  TACATTGTGC  GTCGAATTTA  
 GTTGTTCAAA  TTAATTATGG  TACACGGGAA  ATAAAAATGA  GTTCGTAGAG  CGTAGAAAAA  
 </pre>
-<h3>>DroMel seq6531_2L_21853080_21853669 2L 21853080 21853669</h3>
+<h3>>DroMel seq6531 2L 21853080 21853669</h3>
 <pre>
 GAACGAACCG  TCGAAAAAGA  AAGAGCCTCA  GAGAAAATCT  CATGGACTGA  AAACCATAAA  
 TTTGATAATT  GACTTTCCAC  CAAAGGAAAA  GAAGCCAAAG  GAACCGAAAA  ATTTCTATTG  
@@ -137,23 +137,23 @@ TTTTCATATT  TCTCCGTGGC  TCAGCAGCTG  CGCGCCTGCG  CTAAAGTGTC  TGACGGATGC
 GGCGCATTCG  ATTTCGTTCT  GCC<span class="mot5">AAATTAG  CCG</span>GGCCCCG  TGATTTATGT  CGTCCTTCTG  
 GCTCTTTGGC  CGTTTGTCCC  TTTTAGCCAG  TCCGCGTGAC  TCGAGCGTTG  
 </pre>
-<h2>Motifs presence in alignments</h2><h3>seq1357_2R_18937351_18937843</h3>
+<h2>Motifs presence in alignments</h2><h3>seq1357 2R 18937351 18937843</h3>
 <object data="seq1357_2R_18937351_18937843.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq1396_2R_19526211_19526451</h3>
+<h3>seq1396 2R 19526211 19526451</h3>
 <object data="seq1396_2R_19526211_19526451.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq1397_2R_19526657_19527033</h3>
+<h3>seq1397 2R 19526657 19527033</h3>
 <object data="seq1397_2R_19526657_19527033.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq2300_3R_10415381_10415780</h3>
+<h3>seq2300 3R 10415381 10415780</h3>
 <object data="seq2300_3R_10415381_10415780.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq257_2R_5025930_5026695</h3>
+<h3>seq257 2R 5025930 5026695</h3>
 <object data="seq257_2R_5025930_5026695.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq2820_3R_17227574_17227958</h3>
+<h3>seq2820 3R 17227574 17227958</h3>
 <object data="seq2820_3R_17227574_17227958.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq2821_3R_17228198_17228402</h3>
+<h3>seq2821 3R 17228198 17228402</h3>
 <object data="seq2821_3R_17228198_17228402.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq2837_3R_17392100_17392639</h3>
+<h3>seq2837 3R 17392100 17392639</h3>
 <object data="seq2837_3R_17392100_17392639.svg" width="950px" type="image/svg+xml"></object>
-<h3>seq6531_2L_21853080_21853669</h3>
+<h3>seq6531 2L 21853080 21853669</h3>
 <object data="seq6531_2L_21853080_21853669.svg" width="950px" type="image/svg+xml"></object>
 </div>
 </div>
