good color display in all modes

--- a/examples/display/display-droso/results_genmot.html
+++ b/examples/display/display-droso/results_genmot.html
@@ -21,7 +21,7 @@
 <h2> Motifs</h2>
 <table>
 <tr>
-<th>Color</th><th>Rank</th> <th>Logo</th><th>P-value</th><th>Over-representation</th>
+<th>Color</th><th>Rank</th> <th>Logo</th><th>P-value (log10)</th><th>Over-representation</th>
 </tr>
 <tr>
 <td class="mot1"></td><td>1</td> <td><a href="Motif1.pdf"><img src="Motif1.png" alt="Motif 1" /></a></td><td>-23.6962</td><td>48.8688</td>
@@ -38,18 +38,33 @@
 <tr>
 <td class="mot5"></td><td>5</td> <td><a href="Motif5.pdf"><img src="Motif5.png" alt="Motif 5" /></a></td><td>-15.399</td><td>56.4583</td>
 </tr>
+<tr>
+<td class="mot6"></td><td>6</td> <td><a href="Motif6.pdf"><img src="Motif6.png" alt="Motif 6" /></a></td><td>-14.723</td><td>35.0431</td>
+</tr>
+<tr>
+<td class="mot7"></td><td>7</td> <td><a href="Motif7.pdf"><img src="Motif7.png" alt="Motif 7" /></a></td><td>-13.846</td><td>26.9205</td>
+</tr>
+<tr>
+<td class="mot8"></td><td>8</td> <td><a href="Motif8.pdf"><img src="Motif8.png" alt="Motif 8" /></a></td><td>-13.543</td><td>23.2951</td>
+</tr>
+<tr>
+<td class="mot9"></td><td>9</td> <td><a href="Motif9.pdf"><img src="Motif9.png" alt="Motif 9" /></a></td><td>-13.495</td><td>26.7434</td>
+</tr>
+<tr>
+<td class="mot10"></td><td>10</td> <td><a href="Motif10.pdf"><img src="Motif10.png" alt="Motif 10" /></a></td><td>-13.184</td><td>16.8323</td>
+</tr>
 </table>
 <h2>Motifs instances in the training set</h2><h3>>DroMel seq1357 2R 18937351 18937843</h3>
 <pre>
-CAAAGGACAC  GGACACGCAT  CCTGGCATTG  TTTTCAATTC  ATTTACGCGT  CGACTCAAGT  
-CGCTCGCCCA  CACATATGTT  GGGAAAATAA  TCGAAAAACG  GTTTGTCCCT  TGGCATGAGG  
+CAAAGGACAC  GGACACGCAT  <span class="conserved mot10">CCTGGCATTG  </span>TTTTCAATTC  ATTTACGCGT  CGACTCA<span class="conserved mot7">AGT  
+CGCTCGC</span>CCA  CACATATGTT  GGGAAAATAA  TCGAAAAAC<span class="conserved mot6">G  GTTTGTCCC</span>T  TGGCATGAGG  
 TCCTTTTTGC  TGCGCAGCT<span class="conserved mot5">A  GATTTGCAG</span>T  CCCTTGGCGC  ATA<span class="conserved mot2">GCACATG  CCA</span>TTGATTA  
 CCATGTGTGG  GAATTAGCCT  TGCGAAAAAA  GAAGTTAGTT  AAAATCACAC  ATAAAGAGGC  
-AATGCCAATG  GCTGTAGGTC  CCTGATCCTC  CGTCCTGGCA  GAGAGCTCAC  ACGTCCTGCA  
+<span class="mot10">AATGCCAATG  </span>GCTGTAGGTC  CCTGATCCTC  CGTCCTGGCA  GAGAGCTCAC  ACGTCCTGCA  
 GCGATCCTTC  CACCCTCTGC  ACGTTCTA<span class="mot5">AA  TTTAGCCG</span>CT  GGATTTATGA  CCCCTGTCAT  
 TTGAGCCGCT  CTTCCAGTAC  TTCTTAAAAA  ACCCCTGGAA  TTACATGCAG  TCGAAGAAGG  
-AAGAGAGTGG  AGGAGTCCAA  TGAGTCGAAG  GAGCCCAATG  AGTCGAATGA  GTCGGAGAGG  
-GGGCGTTGAC  AGT
+AAGAGAGTGG  AGGAGTCCAA  TGAGTCGAAG  GAGCCCAATG  AGTCGAATGA  GTCGGAGA<span class="conserved mot8">GG  
+GGGCGTTG</span>AC  AGT
 </pre>
 <h3>>DroMel seq1396 2R 19526211 19526451</h3>
 <pre>
@@ -63,26 +78,26 @@ C
 <pre>
 TTTGTCAAGA  GAGTTCGGGC  TAAAAAAAAA  AAGAAAAACA  AGAATAAGAA  TAAGAATAAG  
 GACAACGAAA  AAACAAGGAA  ATACAGTTGT  AAAACCGGCG  ACTCGAGCCA  CAGAAAAGCA  
-GAA<span class="mot2">ACAAATG  CGG</span>AT<span class="conserved mot2">ACACA  TGCTC</span>GCCGG  CTCGTAATCT  TAATCCTTCA  CACAATAAAC  
-GCCCCTCGAA  TGGACTGCTG  TAT<span class="mot3">GTGTGCT  ATG</span>CAGGACT  CTCTTCTGGT  AGCAATATCC  
-TGATCCTGTT  TGCCGGCAGC  GCCCTTCACA  GCTTCGCTTC  TGGATTGTCG  CATTATGGAT  
-TTCCGAGCGG  TCGCAGCGGT  GTGTCCTTTT  GTTTTAAATT  AGCACGGCAT  GTT<span class="conserved mot2">GCACATG  
+GAA<span class="mot2">ACAAATG  CGG</span>AT<span class="conserved mot2">ACACA  TGCTC</span>GCCGG  CTCGTAATCT  TAATCCTTCA  CACAAT<span class="conserved mot8">AAAC  
+GCCCCT</span>CGAA  TGGACTGCTG  TAT<span class="mot3">GTGTGCT  ATG</span>CAGGACT  CTCTTCTGGT  AGCAATATCC  
+TGATCCTGTT  TGCCGG<span class="conserved mot8">CAGC  GCCCTT</span>CACA  GCTTCGCTTC  T<span class="conserved mot6">GGATTGTCG  C</span>ATTATGGAT  
+TTCCGAGCGG  TCGCAGC<span class="conserved mot6">GGT  GTGTCCT</span>TTT  GTTTTAAATT  AGCACGGCAT  GTT<span class="conserved mot2">GCACATG  
 CGG</span>CATCATC  TGTCCGT
 </pre>
 <h3>>DroMel seq2300 3R 10415381 10415780</h3>
 <pre>
 TTGTTAATAT  CTTAACTTTT  CAGGATATAA  CATGCTAAGT  GTTATATTAT  ATAACATTAA  
 AGTTATTTCT  GCCAGTGTAA  CGTTGCA<span class="mot1">GAG  TCACTTG</span>CTC  CGCAGAGAGC  CGCCACTCAA  
-AGATCAACCC  TCGATGGCAG  ACTCTCGCCT  TTATGGACTA  CGAAATGTGC  AATTTCTGCT  
+AGATCAACCC  TCGATGGC<span class="mot7">AG  ACTCTCGC</span>CT  TTATGGACTA  CGAAATGTGC  AATTTCTGCT  
 CGGGTACCGA  GTTTTACGAT  TTTTCCATAG  GTCCCAATAT  GCC<span class="conserved mot2">GGGCATC  TGT</span>GTGGTAG  
-GGGTTATTTG  GTTGTTGGCC  CAGTATCGAT  GGCAGGCCCG  ATTTTAGACC  CAGTCCACTT  
+GGGTTATTTG  GTTGTTGGCC  CAGTAT<span class="mot10">CGAT  GGCAGG</span>CCCG  ATTTTAGACC  CAGTCCACTT  
 AGGAATTCCA  CGGA<span class="conserved mot3">CAGACC  ACAT</span>G<span class="conserved mot1">GACTC  TCTAG</span>CATTT  TGCCACTTCA  GTTGTTGCTT  
 CAGTTTCAGT  TTTTTTTTTC  CTAGTTGCAC  TGGGGAAAAA  
 </pre>
 <h3>>DroMel seq257 2R 5025930 5026695</h3>
 <pre>
 AAGTCCACGA  CAATCAACAT  GCATCGGAGC  ACAATAAAAA  GGCAAAAGTG  GAAAGGAAGA  
-CTAGGCAAGA  CCGAGAAGAG  TGACAAAGAG  CGAGGGCGGA  AGTGCGGCGA  GGACAAGGCT  
+CTAGGCAAGA  CCGAGAAGAG  TGACAAAGAG  CGAGGGCGGA  AGTGCGGCG<span class="mot6">A  GGACAAGGC</span>T  
 GATCTGCGAT  GAACACCAGG  TAGAAGGTAA  GTGTATCCAC  CGCACAGATT  TAGCCAAAAC  
 AGTCCAAAAC  ATATGTATGA  AAGCAACTAA  AAGAAACGGC  GATCAAAACA  AACAAATGTT  
 TGGTACCAGT  GTACCACAGA  TGTAGAAACC  AGACGCTTTC  CAGACTATGG  CAGCACCCCA  
@@ -121,7 +136,7 @@ A</span><span class="mot4">AAGATACTC  C</span>TCTGACTGC  A<span class="conserved
 TT<span class="conserved mot3">GTGTGCTC  TG</span>CGGCGACT  GAAGGCGGTC  CG<span class="conserved mot5">CGGCTAAT  CT</span>ATGACAGA  AAACATGTAA  
 TCGGAGCGAA  ATGCCGAAAA  TAACTCGTCG  TCGGGGACCT  TTGACTTCAT  TTGCAGCTCT  
 TTACTTGGCC  ATGTTCCCAA  AGGCCTGGCC  CCTGGCACTA  AAGTTGCTCT  GGGTGGCGAT  
-TCGGCGGCCA  ATTAAAATCC  CAATCAGGGC  TCTACTGTAA  TACATTGTGC  GTCGAATTTA  
+T<span class="mot9">CGGCGGCCA  A</span>TTAAAATCC  CAATCAGGGC  TCTACTGTAA  TACATTGTGC  GTCGAATTTA  
 GTTGTTCAAA  TTAATTATGG  TACACGGGAA  ATAAAAATGA  GTTCGTAGAG  CGTAGAAAAA  
 </pre>
 <h3>>DroMel seq6531 2L 21853080 21853669</h3>
@@ -130,12 +145,12 @@ GAACGAACCG  TCGAAAAAGA  AAGAGCCTCA  GAGAAAATCT  CATGGACTGA  AAACCATAAA
 TTTGATAATT  GACTTTCCAC  CAAAGGAAAA  GAAGCCAAAG  GAACCGAAAA  ATTTCTATTG  
 GCTTACACAA  TCGATGAAAC  ACATAAATCT  TAAGTGAGGG  AATTTAGAAA  ATCCAGCCAC  
 CTTAAATAGA  CAACTGCAAA  ACGGAAATGT  ACATCATAAA  AATATTAAAA  ATTCTCTGTC  
-ATTCTTCTAA  TATGGTCTTT  TTGGACATTC  TTGGAAAGAT  AAAAGTCGAT  GCCGGTTGGC  
-CGCCGTTCCA  GTGCATTAGA  GATCGCGTTT  AAAATGGTAC  CCCGATGGGC  TGTCAAGGCC  
+ATTCTTCTAA  TATGGTCTTT  TTGGACATTC  TTGGAAAGAT  AAAAGTCGAT  GCCGG<span class="mot9">TTGGC  
+CGCCG</span>TTCCA  GTGCATTAGA  GATCGCGTTT  AAAATGGTAC  CCCGATGGGC  TGTCAAGGCC  
 GTAAATCTAG  AATAGGGGCA  CTCTTTGCTG  CCCTCTCGTG  CAGCTCATGT  ATTTTCATAA  
 TTTTCATATT  TCTCCGTGGC  TCAGCAGCTG  CGCGCCTGCG  CTAAAGTGTC  TGACGGATGC  
 GGCGCATTCG  ATTTCGTTCT  GCC<span class="mot5">AAATTAG  CCG</span>GGCCCCG  TGATTTATGT  CGTCCTTCTG  
-GCTCTTTGGC  CGTTTGTCCC  TTTTAGCCAG  TCCGCGTGAC  TCGAGCGTTG  
+GCTCTTTGGC  <span class="mot6">CGTTTGTCCC  </span>TTTTAGCCAG  TCCGCGTGAC  TCGAGCGTTG  
 </pre>
 <h2>Motifs presence in alignments</h2><h3>seq1357 2R 18937351 18937843</h3>
 <object data="seq1357_2R_18937351_18937843.svg" width="950px" type="image/svg+xml"></object>
