--- a/examples/display/display-droso/results_genmot.html
+++ b/examples/display/display-droso/results_genmot.html
@@ -56,20 +56,20 @@
 </table>
 <h2>Motifs instances in the training set</h2><h3>>DroMel seq1357 2R 18937351 18937843</h3>
 <pre>
-CAAAGGACAC  GGACACGCAT  <span class="conserved mot10">CCTGGCATTG  </span>TTTTCAATTC  ATTTACGCGT  CGACTCA<span class="conserved mot7">AGT  
+CAAAGGACAC  GGACACGCA<span class="mot10">T  CCTGGCATT</span>G  TTTTCAATTC  ATTTACGCGT  CGACTCA<span class="conserved mot7">AGT  
 CGCTCGC</span>CCA  CACATATGTT  GGGAAAATAA  TCGAAAAAC<span class="conserved mot6">G  GTTTGTCCC</span>T  TGGCATGAGG  
 TCCTTTTTGC  TGCGCAGCT<span class="conserved mot5">A  GATTTGCAG</span>T  CCCTTGGCGC  ATA<span class="conserved mot2">GCACATG  CCA</span>TTGATTA  
 CCATGTGTGG  GAATTAGCCT  TGCGAAAAAA  GAAGTTAGTT  AAAATCACAC  ATAAAGAGGC  
-<span class="mot10">AATGCCAATG  </span>GCTGTAGGTC  CCTGATCCTC  CGTCCTGGCA  GAGAGCTCAC  ACGTCCTGCA  
+<span class="mot10">AATGCCAATG  </span>GCTGTAGGTC  CCTGATCCTC  CGT<span class="mot10">CCTGGCA  GAG</span>AGCTCAC  ACGTCCTGCA  
 GCGATCCTTC  CACCCTCTGC  ACGTTCTA<span class="mot5">AA  TTTAGCCG</span>CT  GGATTTATGA  CCCCTGTCAT  
-TTGAGCCGCT  CTTCCAGTAC  TTCTTAAAAA  ACCCCTGGAA  TTACATGCAG  TCGAAGAAGG  
-AAGAGAGTGG  AGGAGTCCAA  TGAGTCGAAG  GAGCCCAATG  AGTCGAATGA  GTCGGAGA<span class="conserved mot8">GG  
+TTGAGCCGCT  CTTCCAGTAC  TTCTTAAAAA  ACCCCTGGAA  TTACATGCAG  TCGAAGAA<span class="mot7">GG  
+AAGAGAGT</span>GG  AGGAGTCCAA  TGAGTCGAAG  GAGCCCAATG  AGTCGAATGA  GTCGGAGA<span class="conserved mot8">GG  
 GGGCGTTG</span>AC  AGT
 </pre>
 <h3>>DroMel seq1396 2R 19526211 19526451</h3>
 <pre>
-CAGAGGCCAT  CGTGTCATCC  AAGATTATGA  TTTTGACAGG  CATCACGACG  ATATGACATA  
-TGCACGAATG  TCTCTTCGAT  CTATTTTTAT  AGGAGAGATA  TCTGTCAGCA  CATGTTTGTA  
+CAGAGGCCAT  CGTGTCATCC  AAGATTATGA  TTTTGACAGG  CATCACGACG  ATATG<span class="mot2">ACATA  
+TGCAC</span>GAATG  TCTCTTCGAT  CTATTTTTAT  AGGAGAGATA  TCTGTCAGCA  CATGTTTGTA  
 ACCCTACACT  CGTGCCCTGC  CTATAAATAA  AAAAGTTAAG  ATCACAATTT  TAAGGAGATC  
 TTTGTTATAA  TATATTGATT  AATTTATCTC  GAAATACCTA  CAATTCTTAT  CCCCATTAGC  
 C
@@ -78,16 +78,16 @@ C
 <pre>
 TTTGTCAAGA  GAGTTCGGGC  TAAAAAAAAA  AAGAAAAACA  AGAATAAGAA  TAAGAATAAG  
 GACAACGAAA  AAACAAGGAA  ATACAGTTGT  AAAACCGGCG  ACTCGAGCCA  CAGAAAAGCA  
-GAA<span class="mot2">ACAAATG  CGG</span>AT<span class="conserved mot2">ACACA  TGCTC</span>GCCGG  CTCGTAATCT  TAATCCTTCA  CACAAT<span class="conserved mot8">AAAC  
-GCCCCT</span>CGAA  TGGACTGCTG  TAT<span class="mot3">GTGTGCT  ATG</span>CAGGACT  CTCTTCTGGT  AGCAATATCC  
+GAA<span class="conserved mot2">ACAAATG  CGG</span>AT<span class="conserved mot2">ACACA  TGCTC</span>GCCGG  CTCGTAATCT  TAATCCTTCA  CACAATAAA<span class="mot7">C  
+GCCCCTCGA</span>A  TGGACTGCTG  TAT<span class="mot3">GTGTGCT  ATG</span>CAGGACT  CTCTTCTGGT  AGCAATATCC  
 TGATCCTGTT  TGCCGG<span class="conserved mot8">CAGC  GCCCTT</span>CACA  GCTTCGCTTC  T<span class="conserved mot6">GGATTGTCG  C</span>ATTATGGAT  
-TTCCGAGCGG  TCGCAGC<span class="conserved mot6">GGT  GTGTCCT</span>TTT  GTTTTAAATT  AGCACGGCAT  GTT<span class="conserved mot2">GCACATG  
+TTCCGAGCGG  TCGCAGC<span class="conserved mot6">GGT  GTGTCCT</span>TTT  GTTTTAAATT  A<span class="conserved mot10">GCACGGCAT  G</span>TT<span class="conserved mot2">GCACATG  
 CGG</span>CATCATC  TGTCCGT
 </pre>
 <h3>>DroMel seq2300 3R 10415381 10415780</h3>
 <pre>
 TTGTTAATAT  CTTAACTTTT  CAGGATATAA  CATGCTAAGT  GTTATATTAT  ATAACATTAA  
-AGTTATTTCT  GCCAGTGTAA  CGTTGCA<span class="mot1">GAG  TCACTTG</span>CTC  CGCAGAGAGC  CGCCACTCAA  
+AGTTATT<span class="mot10">TCT  GCCAGTG</span>TAA  CGTTGCA<span class="mot1">GAG  TCACTTG</span>CTC  CGCAGAGAGC  CGCCACTCAA  
 AGATCAACCC  TCGATGGC<span class="mot7">AG  ACTCTCGC</span>CT  TTATGGACTA  CGAAATGTGC  AATTTCTGCT  
 CGGGTACCGA  GTTTTACGAT  TTTTCCATAG  GTCCCAATAT  GCC<span class="conserved mot2">GGGCATC  TGT</span>GTGGTAG  
 GGGTTATTTG  GTTGTTGGCC  CAGTAT<span class="mot10">CGAT  GGCAGG</span>CCCG  ATTTTAGACC  CAGTCCACTT  
@@ -97,15 +97,15 @@ CAGTTTCAGT  TTTTTTTTTC  CTAGTTGCAC  TGGGGAAAAA
 <h3>>DroMel seq257 2R 5025930 5026695</h3>
 <pre>
 AAGTCCACGA  CAATCAACAT  GCATCGGAGC  ACAATAAAAA  GGCAAAAGTG  GAAAGGAAGA  
-CTAGGCAAGA  CCGAGAAGAG  TGACAAAGAG  CGAGGGCGGA  AGTGCGGCG<span class="mot6">A  GGACAAGGC</span>T  
-GATCTGCGAT  GAACACCAGG  TAGAAGGTAA  GTGTATCCAC  CGCACAGATT  TAGCCAAAAC  
+CTAGGCAAGA  CCGA<span class="mot1">GAAGAG  TGAC</span>AAAGA<span class="mot7">G  CGAGGGCGG</span>A  AGTGCGGCG<span class="mot6">A  GGACAAGGC</span>T  
+G<span class="mot3">ATCTGCGAT  G</span>AACACCAGG  TAGAAGGTAA  GTGTATCCAC  CGCACAGATT  TAGCCAAAAC  
 AGTCCAAAAC  ATATGTATGA  AAGCAACTAA  AAGAAACGGC  GATCAAAACA  AACAAATGTT  
 TGGTACCAGT  GTACCACAGA  TGTAGAAACC  AGACGCTTTC  CAGACTATGG  CAGCACCCCA  
-AGAAACTCTT  GGAAATACTA  CTCATTGCTA  <span class="mot3">CACCGCACAT  </span>ATGACGTACA  CTTGGAGAAA  
+A<span class="mot1">GAAACTCTT  G</span>GAAATACTA  CTCATTGCTA  <span class="mot3">CACCGCACAT  </span>ATGACGTACA  CTTGGAGAAA  
 CAAGCACATT  CCAAACAATG  CGTATGTACC  TAGTTATTTC  ATTACAAGGA  ATTGAATTTA  
-ATGTACCCAA  AGTTAAGCAG  TAGCATTTAG  TATTTATGTT  TTCTGGATAT  ATTAACTGAA  
+ATGTACCCAA  <span class="mot5">AGTTAAGCAG  </span>TAGCATTTAG  TATTTATGTT  TTCTGGATAT  ATTAACTGAA  
 TGAATAGGAA  ACTTGTACCT  AAATCCATTT  CAGATCCGTG  CCATTTCTTC  CAGTGCACGA  
-GCGGCTTTCC  CATGTGTGTG  TGCTGCGTGG  TAGCCACTCA  CACAGCGGCA  AAACACGACG  
+GCGGCTTTCC  CATGT<span class="mot3">GTGTG  TGCTG</span>CGTGG  TAGCCACTCA  CACAG<span class="mot5">CGGCA  AAACA</span>CGACG  
 CCTTCGCATT  TAAAATTGAT  TAAAACTAAA  AACACTCGAT  GCCGACGCCG  TGCCTTGTTT  
 CGTTTTCAGT  GCGATCGCAG  ACATTGTGCA  AAACGGTTCA  CAGTTCTCTC  CTCGCGACTG  
 CAGGTGATCG  AGTTTTTTTC  GTTTGAGTGC  ACTAAAAAAA  AACAGA
@@ -130,13 +130,13 @@ CACTCGACTA  GTGCATTTAG  TGCTG
 <h3>>DroMel seq2837 3R 17392100 17392639</h3>
 <pre>
 TGCAGTGAAT  GCAACTTGTA  AATCTGTCAC  GCGTCCCAGT  AAATCATCCT  GCATAAGTAA  
-TGTGC<span class="conserved mot5">AGTTT  AGCCC</span>GGAGA  ACACACCCAG  AATTCGAAA<span class="mot4">A  CGATACTCC</span>C  CTCGAACCAC  
+TGTGC<span class="conserved mot5">AGTTT  AGCCC</span>GG<span class="mot6">AGA  ACACACC</span>CAG  AATTCGAAA<span class="mot4">A  CGATACTCC</span>C  CTCGAACCAC  
 TTTGTCACTC  <span class="mot4">GAGATACTCG  </span>AAATACCCGA  GGAGACACTG  C<span class="conserved mot4">GGGATACTC  CGGAATACTC  
 A</span><span class="mot4">AAGATACTC  C</span>TCTGACTGC  A<span class="conserved mot2">ACAGATGCC  G</span>GAATATAAT  AAAGTCGGGG  GAGTGTGAAA  
 TT<span class="conserved mot3">GTGTGCTC  TG</span>CGGCGACT  GAAGGCGGTC  CG<span class="conserved mot5">CGGCTAAT  CT</span>ATGACAGA  AAACATGTAA  
 TCGGAGCGAA  ATGCCGAAAA  TAACTCGTCG  TCGGGGACCT  TTGACTTCAT  TTGCAGCTCT  
-TTACTTGGCC  ATGTTCCCAA  AGGCCTGGCC  CCTGGCACTA  AAGTTGCTCT  GGGTGGCGAT  
-T<span class="mot9">CGGCGGCCA  A</span>TTAAAATCC  CAATCAGGGC  TCTACTGTAA  TACATTGTGC  GTCGAATTTA  
+TTACTTGGCC  ATGTTCCCAA  AGGCCTGGCC  CCTGGCACTA  AA<span class="mot1">GTTGCTCT  GG</span>GTGGCGAT  
+T<span class="conserved mot9">CGGCGGCCA  A</span>TTAAAATCC  CAATCAGGGC  TCTACTGTAA  TACATTGTGC  GTCGAATTTA  
 GTTGTTCAAA  TTAATTATGG  TACACGGGAA  ATAAAAATGA  GTTCGTAGAG  CGTAGAAAAA  
 </pre>
 <h3>>DroMel seq6531 2L 21853080 21853669</h3>
@@ -145,12 +145,12 @@ GAACGAACCG  TCGAAAAAGA  AAGAGCCTCA  GAGAAAATCT  CATGGACTGA  AAACCATAAA
 TTTGATAATT  GACTTTCCAC  CAAAGGAAAA  GAAGCCAAAG  GAACCGAAAA  ATTTCTATTG  
 GCTTACACAA  TCGATGAAAC  ACATAAATCT  TAAGTGAGGG  AATTTAGAAA  ATCCAGCCAC  
 CTTAAATAGA  CAACTGCAAA  ACGGAAATGT  ACATCATAAA  AATATTAAAA  ATTCTCTGTC  
-ATTCTTCTAA  TATGGTCTTT  TTGGACATTC  TTGGAAAGAT  AAAAGTCGAT  GCCGG<span class="mot9">TTGGC  
+ATTCTTCTAA  TATGGTCTTT  TTG<span class="mot1">GACATTC  TTG</span>GAAAGAT  AAAAGTCGAT  GCCGG<span class="mot9">TTGGC  
 CGCCG</span>TTCCA  GTGCATTAGA  GATCGCGTTT  AAAATGGTAC  CCCGATGGGC  TGTCAAGGCC  
 GTAAATCTAG  AATAGGGGCA  CTCTTTGCTG  CCCTCTCGTG  CAGCTCATGT  ATTTTCATAA  
-TTTTCATATT  TCTCCGTGGC  TCAGCAGCTG  CGCGCCTGCG  CTAAAGTGTC  TGACGGATGC  
-GGCGCATTCG  ATTTCGTTCT  GCC<span class="mot5">AAATTAG  CCG</span>GGCCCCG  TGATTTATGT  CGTCCTTCTG  
-GCTCTTTGGC  <span class="mot6">CGTTTGTCCC  </span>TTTTAGCCAG  TCCGCGTGAC  TCGAGCGTTG  
+TTTTCATATT  TCTCCGTGGC  T<span class="mot2">CAGCAGCTG  C</span>GCGCCTGCG  CTAAAGTGTC  TG<span class="mot2">ACGGATGC  
+GG</span>CGCATTCG  ATTTCGTTCT  GCC<span class="mot5">AAATTAG  CCG</span>GGCCCCG  TGATTTATGT  CGTCCTTCTG  
+GCTCTTTGGC  <span class="mot6">CGTTTGTCCC  </span>TTTTAGCCAG  TCCGCGTGAC  <span class="mot7">TCGAGCGTTG  
 </pre>
 <h2>Motifs presence in alignments</h2><h3>seq1357 2R 18937351 18937843</h3>
 <object data="seq1357_2R_18937351_18937843.svg" width="950px" type="image/svg+xml"></object>
