insert style links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@ Software Foundation raise funds for GNU development." -->
 <link href="#Index" rel="index" title="Index">
 <link href="#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="dir.html#Top" rel="up" title="(dir)">
-<style type="text/css">
+   <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection">
+   <link rel="stylesheet" href="css/print.css" type="text/css" media="print"> 
+   <!--[if lt IE 8]>
+   <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen, projection">
+   <![endif]-->
+   <link rel="stylesheet" href="css/texinfo.css" type="text/css" media="screen, projection"> 
+   <style type="text/css">
 <!--
 a.summary-letter {text-decoration: none}
 blockquote.smallquotation {font-size: smaller}
